perubahan scrip ping dari -n ke -c lalu penambahan monitoring yml untuk menghapus \R dari CRLF ke LF

--- a/.github/workflows/robot-monitoring.yml
+++ b/.github/workflows/robot-monitoring.yml
@@ -16,6 +16,10 @@ jobs:
       - name: Ambil kode
         uses: actions/checkout@v3
 
+      # --- TAMBAHKAN LANGKAH INI (PENCUCI HASIL) ---
+      - name: Hapus Karakter Windows (CRLF Fix)
+        run: sed -i 's/\r$//' ./script/ping-server-l.sh
+
       # langkah kedua robot memberi ijin eksekusi script
       - name: beri ijin script
         run : chmod +x ./script/ping-server-l.sh
