--- a/.github/workflows/robot-monitoring.yml
+++ b/.github/workflows/robot-monitoring.yml
@@ -1,5 +1,7 @@
 name : monitoring otomatis
 
+
+
 #robot bekerja setiap ada push ke main
 on:
   push:
@@ -16,8 +18,10 @@ on:
     - cron: '48 3 * * *' 
     # Atau jalan setiap 15 menit (Hati-hati, GitHub gratisan kadang telat)
     # - cron: '*/15 * * * *'
-
+env:
+  web: ${{ secrets.ALAMAT_WEB}}
 #List yang dikerjakan robot
+
 jobs:
   pekerjaan-satu:
     #robot menggunakan ubuntu terbaru
